--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -138,7 +138,6 @@
 
     <button type="button" onclick="addProdukt()">Registrer</button>
     <button type="button" onclick="fillFormAutomatically()">Legg til 20 brukere</button>
-    <button type="button" onclick="slettKundene()">Fjern alle brukere</button>
 </form>
 
 <h2>Motorvognregister</h2>
@@ -158,7 +157,7 @@
         <th>Bilmodel</th>
         <th>Bilfarge</th>
         <th>Registrerings Sted</th>
-        <th>Fjern</th>
+        <th><button onclick=" slettKundene()" id="slettAlle">Slett Alle</button></th>
     </tr>
 </table>
 
@@ -173,7 +172,7 @@
     }
 
     function formaterData(bil) {
-        const headerRow = "<tr><th>PersonNr</th><th>Kjonn</th><th>Navn</th><th>Adresse</th><th>Bilskilt</th><th>Bilmerke</th><th>Bilmodel</th><th>Bilfarge</th><th>Registrerings Sted</th><th>Fjern</th></tr>";
+        const headerRow = "<tr><th>PersonNr</th><th>Kjønn</th><th>Navn</th><th>Adresse</th><th>Bilskilt</th><th>Bilmerke</th><th>Bilmodel</th><th>Bilfarge</th><th>Registrerings Sted</th><th><button onclick=\" slettKundene()\" id=\"slettAlle\">Slett Alle</button></th></tr>";
         const rows = bil.map(item =>
             `<tr><td>${item.personNr}</td><td>${item.kjonn}</td><td>${item.navn}</td><td>${item.adresse}</td><td>${item.bilSkilt}</td><td>${item.bilMerke}</td><td>${item.bilModel}</td>${item.bilFarge}<td>${item.sted}</td><td>${item.fjern}</td></tr>`
         );
